- Fixed: Menu Alignment - Fixed: Search result overlapping sidebar content

--- a/static/css/custom-navigation.css
+++ b/static/css/custom-navigation.css
@@ -5,7 +5,7 @@
 #sidebar ul.topics {
 	margin: 1rem;
 	margin-right: 0;
-	margin-left: 0 !important;
+	margin-left: 10px !important;
 }
 #sidebar ul li li {
 
@@ -127,33 +127,38 @@ ul.nav-list.treeview {
 	margin: 1rem 0 0;
 	vertical-align: top;
 	position: absolute;
-	left: 35px;
+	left: 15px;
 	bottom: 5px;
 }
 
 /* ajax live search */
 #live-filter-navigation ul#content {
-  list-style-type:none;position:relative;z-index:10;padding:0;
+  list-style-type:none;
+  position:relative;
+  z-index:10;
+  padding:0;
+  padding-left: 10px;
 }
 #search-results {
   background-color: #ffffff;
-  border: 1px solid #00364d;
-  box-shadow: 0 1.6px 3.6px 0 #b3b3b3, 0 0.3px 0.9px 0 #b3b3b3;
-  border-radius: 5px;
+  border-radius: 0 0 5px 5px;
   cursor: default;
   list-style-type: none;
   margin: 2px 0 0!important;
   max-height: 18rem;
   max-width: 100%;
-  min-width: 100%;
+  width: 450px !important;
   padding: 0;
-  position: absolute;
+  position: relative;
   z-index: 1000;
 }
 
 #search-results.active {
   overflow: scroll;
   overflow-y: visible;
+  border: 1px solid #949494;
+  box-shadow: 0 1.6px 3.6px 0 #b3b3b3, 0 0.3px 0.9px 0 #b3b3b3;
+  position: fixed;
 }
 
 #search-results .tutup {
@@ -161,7 +166,7 @@ ul.nav-list.treeview {
   visibility: hidden;
   font-size: 17px;
   font-weight: bold;
-  right: 10px;
+  right: 20px;
   z-index: 300;
   color: #d7d7d7;
   cursor: pointer;
@@ -191,4 +196,5 @@ ul.nav-list.treeview {
 #live-filter-navigation ul#content li a span {
   font-size: 10px;
   font-weight: normal;
+  line-height: 1.1em;
 }
